# rbxex

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  tsconfig.json
.github/workflows/: changelog.yml  ci.yml  release.yml
src/: cli.rs  main.rs
src/cli/: commands.rs  ops.rs  utils.rs
src/cli/commands/: init.rs  pack.rs
src/cli/ops/: init.rs  pack.rs
src/cli/utils/: command.rs  rojo.rs
src/core/: pack.rs
src/core/pack/: codegen.rs  config.rs  literal.rs  manifest.rs  runtime.lua  transform.rs
templates/common/: eslint.config.mjs  prettier.config.mjs
templates/package/: tsconfig.json
templates/script/: default.project.json  tsconfig.json
templates/toolchain/: aftman.toml  foreman.toml  mise.toml  rokit.toml
tests/: integration.rs
tests/fixtures/project/: default.project.json  multi_path.project.json  no_paths.project.json
tests/integration/: bundle.rs  cli.rs  init_scaffold.rs  mod.rs  pack_ops.rs  rojo_utils.rs
