[package]
name = "rbxex"
version = "0.5.0"
edition = "2024"
rust-version = "1.88.0"
description = "A bundler and scaffolding tool for Roblox/Luau projects"
repository = "https://github.com/TerminalVibes/rbxex"
homepage = "https://github.com/TerminalVibes/rbxex"
license = "MIT"
keywords = ["roblox", "luau", "bundler", "cli"]
categories = ["command-line-utilities", "game-development"]
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
darklua = "0.17.3"
dialoguer = "0.11"
notify = "6"
owo-colors = { version = "4", features = ["supports-colors"] }
rbx_binary = "2.0.1"
rbx_dom_weak = "4.1.0"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
ustr = "1.1.0"
which = "8.0.2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
